...
          ExposedDropdownMenu(
              expanded = expanded,
              onDismissRequest = { expanded = false },
              modifier = Modifier.heightIn(max = maxMenuHeight)) {
                LazyColumn(modifier = Modifier.heightIn(max = maxMenuHeight)) {
                  items(options) { option ->
                    val optionTag =
                        ProfileTestTags.SECTION_OPTION_PREFIX +
                            option.replace(Regex("\\s+"), "_").replace(Regex("[^A-Za-z0-9_]"), "")

                    DropdownMenuItem(
                        text = {
                          Box(
...
